start of wp18 receiver

--- a/utilities/Makefile
+++ b/utilities/Makefile
@@ -3,12 +3,14 @@ default: all
 all:
 	$(MAKE) -C controller-utilities
 	$(MAKE) -C receiver-simple
+	$(MAKE) -C receiver-wp18
 	$(MAKE) -C receiver
 	$(MAKE) -C temperature
 
 clean:
 	$(MAKE) -C controller-utilities clean
 	$(MAKE) -C receiver-simple clean
+	$(MAKE) -C receiver-wp18 clean
 	$(MAKE) -C receiver clean
 	$(MAKE) -C temperature clean
 
