added osc and tty

--- a/utilities/receiver-wp18/Makefile
+++ b/utilities/receiver-wp18/Makefile
@@ -2,7 +2,7 @@ OBJS=receiver.o
 BIN=receiver
 
 CFLAGS+=-Wall -g -O3
-LDFLAGS+=-lm -lrt -lz -lc -lbcm2835 -lpthread
+LDFLAGS+=-lm -lrt -lz -lc -lbcm2835 -llo -lpthread
 
 INCLUDES+=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 
